    * Freeform documentation from /usr/share/doc is now included
      in the new ":supdoc" component instead of the ":doc" component
      by default. (CNY-883)
    * Configuration files are now put into a ":config" component to
      make it easier to override them.  This configuration can be
      disabled by setting the configComponent configuration item
      to False. (CNY-172)

  o Bugfixes:
    * Files added in both the repository and locally with cvc now give an
      error message on update rather than corrupting the CONARY file (CNY-1024)
    * Adding a file locally and then merging that file from upstream now
      causes an error as expected (it would traceback before). (CNY-1021)
    * Files added in both the repository and locally with cvc now give
      an error message on update rather than corrupting the CONARY
      file (CNY-1024)
    * Adding a file locally and then merging that file from upstream
      now causes an error as expected (it would traceback
      before). (CNY-1021)
    * Empty groups will not traceback if resolveDependencies is True --
      they will display an error message as expected. (CNY-1030)
    * Specifying a bad protocol in a repositoryMap entry (a protocol
      other than http or https) no longer causes an unhandled
      exception. (CNY-932)
    * When migrating, conary now utilizes update mode with all updates
      explicitly specified when re-execing after critical updates.
      Previously, the migration failed if a critical update was
      applied. (CNY-980)
    * Avoid infinite loops when including configuration files. (CNY-914)
    * Clean up after a critical update has been performed. (CNY-1012)
    * Do not allow for incomplete changesets to be checked in. (CNY-749)
    * Raise an exception if trying to write a changeset file to something
      that cannot be written (directory, read-only file etc). (CNY-903)



Changes in 1.0.37:
  o Bugfixes: